<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <artifactId>web</artifactId>
    <packaging>jar</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>9</source>
                    <target>9</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <parent>
        <artifactId>core</artifactId>
        <groupId>com.zhmenko</groupId>
        <version>0.0.1</version>
    </parent>

    <dependencies>
        <dependency>
            <groupId>com.zhmenko</groupId>
            <artifactId>security</artifactId>
            <version>${app.version}</version>
        </dependency>

        <dependency>
            <groupId>com.zhmenko</groupId>
            <artifactId>host-validation</artifactId>
            <version>${app.version}</version>
        </dependency>

        <dependency>
            <groupId>com.zhmenko</groupId>
            <artifactId>router</artifactId>
            <version>${app.version}</version>
        </dependency>

        <dependency>
            <groupId>com.zhmenko</groupId>
            <artifactId>ids</artifactId>
            <version>${app.version}</version>
        </dependency>

<!--        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-rest</artifactId>
        </dependency>-->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

<!--&lt;!&ndash;        &lt;!&ndash; Swagger UI libraries &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>io.springfox</groupId>-->
<!--            <artifactId>springfox-boot-starter</artifactId>-->
<!--            <version>3.0.0</version>-->
<!--        </dependency>&ndash;&gt;-->
    </dependencies>
</project>